--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="jumbotron text-center bg-light">
                 <h1>TODAY'S WEATHER</h1>
                 <p>Kampala,Uganda <br>
-                    cloudy 
+                    cloudy <br> Temp:22<sup>o</sup>C
                     </p>
             </div>
 
